--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,70 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.resume-button {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.7em 1.2em;
+    font-size: 16px;
+    border-radius: 0.5em;
+    color: var(--text-primary);
+    border: 1px solid var(--accent);
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    transition: all 0.2s ease-in;
+}
+
+.resume-button:active {
+    transform: scale(0.98);
+}
+
+.resume-button:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.25);
+    top: 100%;
+    width: 140%;
+    height: 180%;
+    background-color: rgba(79, 70, 229, 0.1);
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
+}
+
+.resume-button:after {
+    content: "";
+    position: absolute;
+    left: 55%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.45);
+    top: 180%;
+    width: 160%;
+    height: 190%;
+    background-color: var(--accent);
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
+}
+
+.resume-button:hover {
+    color: #ffffff;
+    border: 1px solid var(--accent);
+}
+
+.resume-button:hover:before {
+    top: -35%;
+    background-color: var(--accent);
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.resume-button:hover:after {
+    top: -45%;
+    background-color: var(--accent);
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
